# syslog-parser

./: LICENSE  README.md  syslog-parser.cabal
src/: Main.hs
src/Text/: Syslog.hs
src/Text/Syslog/: RFC3164.hs  Types.hs
src/lib/Text/: Syslog.hs
src/lib/Text/Log/: Syslog.hs
src/lib/Text/Log/Syslog/: RFC3164.hs  Types.hs
src/lib/Text/Syslog/: RFC3164.hs  Types.hs
