name:                  syslog-parser
version:               0.1.0.0
synopsis:              Syslog event parser.
description:           Syslog event parser.
license:               MIT
license-file:          LICENSE
author:                Derek Schaefer
maintainer:            derek.schaefer@gmail.com
copyright:             (c) 2014 Derek Schaefer
category:              Text
build-type:            Simple
cabal-version:         >= 1.10

executable syslog-parser
  main-is:             Main.hs
  build-depends:       syslog-parser,
                       base,
                       bytestring
  hs-source-dirs:      src/bin
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

library
  exposed-modules:     Text.Log.Syslog,
                       Text.Log.Syslog.Types,
                       Text.Log.Syslog.RFC3164
  build-depends:       base >= 4.6 && < 4.7,
                       bytestring >= 0.10.0.2,
                       attoparsec >= 0.12.1.1,
                       time == 1.4.0.1,
                       old-locale == 1.0.0.5
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -O2 -Wall
